@@ -168,8 +168,8 @@ In Mac mode Unix line breaks are changed to two Mac line breaks.
 
 =item B<-m, --add-bom>
 
-Write an UTF-8 Byte Order Mark in the output file.
-See also section UNICODE.
+Write an UTF-8 Byte Order Mark in the output file. Never use this option when
+the output encoding is other than UTF-8. See also section UNICODE.
 
 =item B<-n, --newfile INFILE OUTFILE ...>
 
@@ -258,6 +258,8 @@ also supported with option C<-1252>. For other code pages use dos2unix in
 combination with iconv(1).  Iconv can convert between a long list of character
 encodings.
 
+Never use ISO converion on Unicode text files. It will corrupt UTF-8 encoded files.
+
 Some examples:
 
 Convert from DOS default code page to Unix Latin-1
@@ -303,7 +305,7 @@ and L<http://czyborra.com/charsets/iso8859.html>.
 
 There exist different Unicode encodings. On Unix and Linux Unicode files are
 typically encoded in UTF-8 encoding. On Windows Unicode text files can be
-encoded in UTF-8, UTF-16, or UTF-16 big endian, but are commonly encoded in
+encoded in UTF-8, UTF-16, or UTF-16 big endian, but are mostly encoded in
 UTF-16 format.
 
 =head2 Conversion
@@ -314,21 +316,28 @@ files.
 All versions of dos2unix/unix2dos can convert UTF-8 encoded files, because
 UTF-8 was designed for backward compatiblity with ASCII.
 
-Dos2unix/unix2dos with Unicode UTF-16 support, can convert also UTF-16 encoded
-text files. To see if dos2unix was built with UTF-16 support type C<dos2unix -V>.
+Dos2unix/unix2dos with Unicode UTF-16 support, can convert little and big
+endian UTF-16 encoded text files. To see if dos2unix was built with UTF-16
+support type C<dos2unix -V>.
 
 The Windows versions of dos2unix/unix2dos will convert UTF-16 encoded files
 always to UTF-8 encoded files. Unix versions of dos2unix/unix2dos convert
-UTF-16 encoded files to the locale encoding.
+UTF-16 encoded files to the locale encoding. Because UTF-8 formatted text files
+are well supported on both Windows and Unix, dos2unix/unix2dos has no option to
+convert to UTF-16. All UTF-16 characters can be encoded in UTF-8. Conversion
+from UTF-16 to UTF-8 is without loss. On Unix, when the locale encoding is not
+UTF-8, non-convertable characters are converted to a dot.
 
 ISO and 7-bit mode conversion do not work on UTF-16 files.
 
 =head2 Byte Order Mark
 
-On Windows Unicode text files typically have a Byte Order Mark (BOM),
-see also L<http://en.wikipedia.org/wiki/Byte_order_mark>.
+On Windows Unicode text files typically have a Byte Order Mark (BOM), because
+many Windows programs (including Notepad) add BOMs by default. See also
+L<http://en.wikipedia.org/wiki/Byte_order_mark>.
 
-On Unix Unicode files typically don't have a BOM.
+On Unix Unicode files typically don't have a BOM. It is assumed that text files
+are encoded in the locale(1) encoding.
 
 Dos2unix can only detect if a file is in UTF-16 format if the file has a BOM.
 When an UTF-16 file doesn't have a BOM, dos2unix will see the file as a binary
@@ -424,9 +433,6 @@ combination with the find(1) and xargs(1) commands. For instance to convert all
 
     find doc -name *.txt |xargs dos2unix
 
-Windows users can get C<find> and C<xargs> from the UnxUtils package
-L<http://sourceforge.net/projects/unxutils/>.
-
 =head1 LOCALIZATION
 
 =over 4
@@ -492,9 +498,13 @@ are used.
 
 =head1 STANDARDS
 
-http://en.wikipedia.org/wiki/Text_file
-http://en.wikipedia.org/wiki/Carriage_return
-http://en.wikipedia.org/wiki/Newline
+L<http://en.wikipedia.org/wiki/Text_file>
+
+L<http://en.wikipedia.org/wiki/Carriage_return>
+
+L<http://en.wikipedia.org/wiki/Newline>
+
+L<http://en.wikipedia.org/wiki/Unicode>
 
 =head1 AUTHORS
 
@@ -512,8 +522,9 @@ Freecode: L<http://freecode.com/projects/dos2unix>
 =head1 SEE ALSO
 
 file(1)
-iconv(1)
 find(1)
+iconv(1)
+locale(1)
 xargs(1)
 
 =cut
